01-Mar-2011 Add detection code for circular dependencies in external and required dependents.

28-Feb-2011 Following on from the previous fix, allow C.DynamicLibrary to be inherited for GCC builds.

28-Feb-2011 Allow script modules to derive from an abstract module base class. Allow this to work for C.DynamicLibrary modules.

27-Feb-2011 Opus.Core.RequiredModules now really do export the option collections that have the appropriate meta markup.

25-Feb-2011 Updated Opus .csproj and .sln for SharpDevelop 4.0.

20-Feb-2011 Fixes to C.ObjectFileCollection for VisualStudio project generation in the case of there being no source files yet (can happen while starting to create a project).

18-Feb-2011 Issue #33. Fixing dependency checking for C.Application and C.DynamicLibrary in the NativeBuilder that was not checking the timestamps for static and import libraries.

18-Feb-2011 Issue #32. Correctly passing recursive symbols resolution options to the GCC linker, with the -Wl, prefix. This resolves undefined reference errors when libraries are specified in the incorrect order.

17-Feb-2011 Don't catch System.Reflection.TargetInvocationException too soon, or relevant stack trace information is lost upon a rethrow.

15-Feb-2011 Opus.Core.State.BuildRoot no longer uses an incorrect directory separator on Windows. Simplified some plugin code because of this fix.

14-Feb-2011 Opus.Core.DirectoryCollection.Add(string,bool) renamed to AddAbsoluteDirectory.
            Implemented Add and AddRange methods on Opus.Core.DirectoryCollection that accept a module, e.g. this object in an update options instance delegate.

13-Feb-2011 C.HeaderLibrary now includes a Utility vcproj when using the VSSolutionBuilder.

13-Feb-2011 Issue #31. Opus.Core.File.GetFiles no longer recurses into all subdirectories. Wildcarded subdirectories need to be explicitly specified.
